updated the styling for the explore button to fix the issue on safari

--- a/src/App.css
+++ b/src/App.css
@@ -2376,7 +2376,8 @@ label, p {
 .discussion-button{
   margin-top: 15px;
   width: 124px;
-  height: 20px;
+  height: 25px;
+  border: 0;
   background: #F8A141;
   border-radius: 5px;
   font-family: Roboto, serif;
